--- a/branches/0.9.5-debian/debian/changelog
+++ b/branches/0.9.5-debian/debian/changelog
@@ -1,3 +1,11 @@
+sim (0.9.4.99+SVN2233-1) unstable; urgency=high
+
+  * July-2008 ICQ hotfix
+  * Fix bug #10530: Impossible to sent SMS via ICQ
+  * Fix bug #12320: Crash on adding ICQ contact to visible/invisible list, when it is joint with MSN or Yahoo.
+
+ -- Nikolay Shaplov <N@shaplov.ru>  Wed, 02 Jul 2008 11:41:57 +0400
+
 sim (0.9.4.99+SVN2205-1) unstable; urgency=low
 
   * Fixed adding Non-IM contacts to contact list
