--- a/branches/trunk-debian-official/debian/changelog
+++ b/branches/trunk-debian-official/debian/changelog
@@ -1,3 +1,11 @@
+sim (0.9.5~svn20080806-1) unstable; urgency=low
+
+  * New upstream version fixes icq compliation (Closes: #493966)
+  * Really replaced sounds and icons with unclear licensing
+    with GPL ones. (Closes: #386570)
+
+ -- Alexander Petrov <zowers@gmail.com>  Wed, 06 Aug 2008 17:05:13 +0400
+
 sim (0.9.5~svn20080716-1) unstable; urgency=low
 
   * New upstream version 0.9.4.5 SVN (Closes: #420095)
